[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "langchain>=1.1.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
]
